
Version 6.05  2019-12-23
 * fdfs_trackerd and fdfs_storaged print the server version in usage.
   you can execute fdfs_trackerd or fdfs_storaged without parameters
   to show the server version
 * trunk server support compress the trunk binlog periodically,
   the config items in tracker.conf: trunk_compress_binlog_interval
   and trunk_compress_binlog_time_base
 * trunk binlog compression support transaction
 * support backup binlog file when truncate trunk binlog,
   the config item in tracker.conf: trunk_binlog_max_backups
 * support alignment size for trunk space allocation
 * support merge free trunk spaces

Version 6.04  2019-12-05
 * storage_report_ip_changed ignore result EEXIST
 * use get_gzip_command_filename from libfastcommon v1.42
 * support compress error log and access log
 * disk recovery support multi-threads to speed up
 * bugfix: should use memset to init pReader in function
   storage_reader_init, this bug is caused by v6.01

  NOTE: you MUST upgrade libfastcommon to V1.42 or later


Version 6.03  2019-11-20
 * dual IPs support two different types of inner (intranet) IPs
 * storage server request tracker server to change it's status
   to that of tracker leader when the storage server found 
   it's status inconsistence
 * bugfix: fdfs_monitor fix get index of the specified tracker server
 * storage server write to data_init_flag and mark file safely
   (write to temp file then rename)
 * code refine: combine g_fdfs_store_paths and g_path_space_list,
   and extent struct FDFSStorePathInfo
 * check store path's mark file to prevent confusion
 * new selected tracker leader do NOT notify self by network
 * larger network_timeout for fetching one-store-path binlog
   when disk recovery
 
  NOTE: the tracker and storage server must upgrade together


Version 6.02  2019-11-12
 * get_file_info calculate CRC32 for appender file type
 * disk recovery download file to local temp file then rename it
   when the local file exists