@@ -146,7 +146,7 @@ use_trunk_file = false
 # the min slot size, should <= 4KB
 # default value is 256 bytes
 # since V3.00
-slot_min_size = 256
+slot_min_size = 512
 
 # the max slot size, should > slot_min_size
 # store the upload file to trunk file when it's size <=  this value
@@ -165,6 +165,11 @@ trunk_alloc_alignment_size = 512
 # default value is false
 # since V6.05
 trunk_free_space_merge = true
+
+# if delete / reclaim the unused trunk files
+# default value is false
+# since V6.05
+delete_unused_trunk_files = true
 
 # the trunk file size, should >= 4MB
 # default value is 64MB
