@@ -601,6 +601,9 @@ int tracker_load_from_conf_file(const char *filename, \
 		g_trunk_free_space_merge = iniGetBoolValue(NULL,
 			"trunk_free_space_merge", &iniContext, false);
 
+		g_delete_unused_trunk_files = iniGetBoolValue(NULL,
+			"delete_unused_trunk_files", &iniContext, false);
+
 		if ((result=tracker_load_storage_id_info(
 				filename, &iniContext)) != 0)
 		{
@@ -779,6 +782,7 @@ int tracker_load_from_conf_file(const char *filename, \
 			"trunk_init_check_occupying=%d, "
 			"trunk_init_reload_from_binlog=%d, "
 			"trunk_free_space_merge=%d, "
+			"delete_unused_trunk_files=%d, "
 			"trunk_compress_binlog_min_interval=%d, "
 			"trunk_compress_binlog_interval=%d, "
 			"trunk_compress_binlog_time_base=%02d:%02d, "
@@ -823,6 +827,7 @@ int tracker_load_from_conf_file(const char *filename, \
 			(FDFS_ONE_MB * 1024)), g_trunk_init_check_occupying,
 			g_trunk_init_reload_from_binlog,
             g_trunk_free_space_merge,
+            g_delete_unused_trunk_files,
 			g_trunk_compress_binlog_min_interval,
 			g_trunk_compress_binlog_interval,
             g_trunk_compress_binlog_time_base.hour,
