@@ -6,11 +6,19 @@ Version 6.05  2019-12-23
  * trunk server support compress the trunk binlog periodically,
    the config items in tracker.conf: trunk_compress_binlog_interval
    and trunk_compress_binlog_time_base
+
  * trunk binlog compression support transaction
  * support backup binlog file when truncate trunk binlog,
    the config item in tracker.conf: trunk_binlog_max_backups
+
  * support alignment size for trunk space allocation
+   the config item in tracker.conf: trunk_alloc_alignment_size 
+
  * support merge free trunk spaces
+   the config item in tracker.conf: trunk_free_space_merge
+
+ * support delete unused trunk files
+   the config item in tracker.conf: delete_unused_trunk_files
 
 Version 6.04  2019-12-05
  * storage_report_ip_changed ignore result EEXIST
